--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,10 +1,11 @@
-
-FROM eclipse-temurin:17-jdk-alpine as build
+FROM eclipse-temurin:17-jdk as build
 WORKDIR /app
 
 COPY pom.xml .
 COPY .mvn/ .mvn
 COPY mvnw .
+
+RUN chmod +x mvnw
 
 RUN ./mvnw dependency:go-offline
 
@@ -12,7 +13,7 @@ COPY src ./src
 
 RUN ./mvnw clean package -DskipTests
 
-FROM eclipse-temurin:17-jre-alpine
+FROM eclipse-temurin:17-jre
 WORKDIR /app
 
 COPY --from=build /app/target/*.jar app.jar
