--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,7 @@
-
 services:
   db:
-    image: postgres:14
-    container_name: cafeteria_db # Nome do container, pode ser o que você preferir
+    image:  postgres:15.3-alpine
+    container_name: cafeteria_db 
     environment:
       POSTGRES_USER: admin
       POSTGRES_PASSWORD: admin
@@ -21,7 +20,7 @@ services:
       - db
     environment:
       SPRING_PROFILES_ACTIVE: docker
-      SPRING_DATASOURCE_URL: jdbc:postgresql://db:5432/cafeteria
+      SPRING_DATASOURCE_URL: jdbc:postgresql://db:5432/cafeteria_db
       SPRING_DATASOURCE_USERNAME: admin
       SPRING_DATASOURCE_PASSWORD: admin
 
